[package]
name = "seaport"
description = "Reliable UDP networking library"
repository = "https://github.com/jprochazk/seaport"
license = "MIT OR Apache-2.0"
version = "0.0.0"
authors = ["jprochazk"]
edition = "2021"
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
log = "0.4"
thiserror = "1"
mio = { version = "0.8", features = ["os-poll", "net"] }
rand = { version = "0.8.4", features = ["small_rng"] }
static_assertions = "1.1.0"
bytes = "1.1.0"

[dev-dependencies]
env_logger = "0.9"
pretty_assertions = "1"